# hyper-msging

./: .cursorrules  .env.example  .gitignore  README.md  command.md  debug_hyperliquid_api.py  env.example  pyproject.toml  shortcut.md  test_real_api.py  test_real_close_position.py
.github/ISSUE_TEMPLATE/: 프로젝트-이슈.md
app/: config.py  main.py
app/api/: price.py  trading.py
app/core/: hyperevm_client.py  hyperliquid_client.py  hyperliquid_sdk_client.py  hyperunit_client.py
tests/: test_hyperunit_client.py  test_price.py  test_trading.py
