[tool.poetry]
name = "trading-hub"
version = "0.1.0"
description = "통합 트레이딩 허브 Toy Project"
authors = ["commin <commin0813@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version="^0.22.0"}
httpx = "^0.24.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
redis = "^5.0"
web3 = "^7.12.0"
eth-keys = "^0.7.0"
hyperliquid = "^0.4.66"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
respx = "^0.20.0"
pytest-mock = "^3.10"
black = "^24.0"
flake8 = "^6.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"